// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BezwarenDetail > No result > Matches the Full Page snapshot 1`] = `
<DocumentFragment>
  <main
    class="_Page_47d7c0 _DetailPage_47d7c0"
  >
    <header
      class="_PageHeading_3b337d _hasIcon_3b337d _hasBackLink_3b337d"
    >
      <span
        aria-hidden="true"
        class="_Icon_3b337d"
      >
        <svg
          aria-label="Bezwaren"
          class="_ChapterIcon_3ea2dd"
          fill="black"
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 19H26V21H15V19Z"
          />
          <path
            d="M26 23H15V25H26V23Z"
          />
          <path
            clip-rule="evenodd"
            d="M9 18C4.02945 18 0 13.9706 0 9C0 4.02942 4.02945 0 9 0C12.1204 0 14.8699 1.58801 16.4845 4H32V32H9V18ZM17.777 11C17.9229 10.3568 18 9.68738 18 9C18 8.66199 17.9814 8.32831 17.9451 8H28V28H13V17.0645C13.7281 16.7026 14.4003 16.2451 15 15.7083V17H26V15H15.7083C16.2451 14.4003 16.7026 13.7281 17.0645 13H26V11H17.777Z"
            fill-rule="evenodd"
          />
          <rect
            fill="#D9D9D9"
            height="7"
            width="2"
            x="8"
            y="3"
          />
          <rect
            fill="#D9D9D9"
            height="2"
            transform="matrix(1 0 0 -1 8 14)"
            width="2"
          />
        </svg>
      </span>
      <div
        class="_HeadingInner_3b337d"
      >
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45 _BackLink_3b337d"
          href="/bezwaren"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-links-icoon
            </title>
            <polygon
              points="22.8571429 32 6.85714286 16 22.8571429 0 25.7568858 2.91002571 12.6771943 16 25.7568858 29.0899743"
            />
          </svg>
          Bezwaren
        </a>
        <h2
          class="ams-heading ams-heading--1"
        >
          Bezwaar
        </h2>
      </div>
    </header>
    <div
      class="_PageContent_47d7c0"
    >
      <section
        class="ams-alert ams-alert--error"
      >
        <div
          class="ams-alert__icon"
        >
          <span
            class="ams-icon ams-icon--size-4"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              viewBox="0 0 36 36"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M33.63 30.9H2.37L18 3zm-24.44-4h17.62L18 11.19z"
              />
              <path
                d="M17 16.99h2v4.95h-2zm0 5.95h2v1.95h-2z"
              />
            </svg>
          </span>
        </div>
        <div
          class="ams-alert__content"
        >
          <h2
            class="ams-heading ams-heading--4"
          >
            Foutmelding
          </h2>
          <p
            class="ams-paragraph"
          >
            We kunnen op dit moment geen gegevens tonen.
          </p>
        </div>
      </section>
    </div>
  </main>
</DocumentFragment>
`;

exports[`BezwarenDetail > With result > Matches the Full Page snapshot 1`] = `
<DocumentFragment>
  <main
    class="_Page_47d7c0 _DetailPage_47d7c0"
  >
    <header
      class="_PageHeading_3b337d _hasIcon_3b337d _hasBackLink_3b337d"
    >
      <span
        aria-hidden="true"
        class="_Icon_3b337d"
      >
        <svg
          aria-label="Bezwaren"
          class="_ChapterIcon_3ea2dd"
          fill="black"
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 19H26V21H15V19Z"
          />
          <path
            d="M26 23H15V25H26V23Z"
          />
          <path
            clip-rule="evenodd"
            d="M9 18C4.02945 18 0 13.9706 0 9C0 4.02942 4.02945 0 9 0C12.1204 0 14.8699 1.58801 16.4845 4H32V32H9V18ZM17.777 11C17.9229 10.3568 18 9.68738 18 9C18 8.66199 17.9814 8.32831 17.9451 8H28V28H13V17.0645C13.7281 16.7026 14.4003 16.2451 15 15.7083V17H26V15H15.7083C16.2451 14.4003 16.7026 13.7281 17.0645 13H26V11H17.777Z"
            fill-rule="evenodd"
          />
          <rect
            fill="#D9D9D9"
            height="7"
            width="2"
            x="8"
            y="3"
          />
          <rect
            fill="#D9D9D9"
            height="2"
            transform="matrix(1 0 0 -1 8 14)"
            width="2"
          />
        </svg>
      </span>
      <div
        class="_HeadingInner_3b337d"
      >
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45 _BackLink_3b337d"
          href="/bezwaren"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-links-icoon
            </title>
            <polygon
              points="22.8571429 32 6.85714286 16 22.8571429 0 25.7568858 2.91002571 12.6771943 16 25.7568858 29.0899743"
            />
          </svg>
          Bezwaren
        </a>
        <h2
          class="ams-heading ams-heading--1"
        >
          BI.21.014121.001
        </h2>
      </div>
    </header>
    <div
      class="_PageContent_47d7c0"
    >
      <div
        class="_InfoDetail_6f1df2"
      >
        <h3
          class="ams-heading ams-heading--4 _Label_6f1df2"
        >
          Onderwerp
        </h3>
        <p
          class="_Value_6f1df2"
        >
          Korte omschrijving van het bezwaar
        </p>
      </div>
      <div
        class="_InfoDetail_6f1df2"
      >
        <h3
          class="ams-heading ams-heading--4 _Label_6f1df2"
        >
          Reden bezwaar
        </h3>
        <p
          class="_Value_6f1df2"
        >
          Lange uitleg over het bezwaar. Kan dus veel tekst hebben want is vrije invoer.
        </p>
      </div>
      <div
        class="_InfoDetailGroup_6f1df2"
      >
        <div
          class="_InfoDetailGroupContent_6f1df2"
        >
          <div
            class="_InfoDetail_6f1df2"
          >
            <h3
              class="ams-heading ams-heading--4 _Label_6f1df2"
            >
              Besluit waartegen u bezwaar maakt
            </h3>
            <p
              class="_Value_6f1df2"
            >
              F2021.0008
            </p>
          </div>
          <div
            class="_InfoDetail_6f1df2"
          >
            <h3
              class="ams-heading ams-heading--4 _Label_6f1df2"
            >
              Datum
            </h3>
            <p
              class="_Value_6f1df2"
            >
              01-05-2021
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="_PageContent_47d7c0"
    >
      <div
        class="_InfoDetailGroup_6f1df2"
      >
        <div
          class="_DocumentListHeader_839df0"
        >
          <h3
            class="ams-heading ams-heading--4 _Label_6f1df2"
          >
            Documenten online aangeleverd
          </h3>
          <span
            class="_DocumentListHeader_Date_839df0"
          >
            Datum
          </span>
        </div>
        <div
          class="_InfoDetailGroupContent_6f1df2"
        >
          <ul
            class="_DocumentList_7ed0ad"
          >
            <li
              class="_DocumentListItem_7ed0ad"
            >
              <span
                class="_DocumentLinkWrap_81c3b4"
              >
                <span
                  class="_DownloadIcon_81c3b4"
                >
                  <svg
                    aria-hidden="true"
                    focusable="false"
                    height="14"
                    viewBox="0 0 32 32"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlns:xlink="http://www.w3.org/1999/xlink"
                  >
                    <title>
                      download-icoon
                    </title>
                    <path
                      d="M0,27.9962465 L32,27.9962465 L32,32 L0,32 L0,27.9962465 Z M22.36,14.0131373 L25.19,16.8357835 L16,26.0444166 L6.81,16.8357835 L9.64,14.0131373 L14,18.3772287 L14,-3.55271368e-15 L18,-3.55271368e-15 L18,18.3772287 L22.36,14.0131373 Z"
                    />
                  </svg>
                </span>
                <a
                  class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45 _DocumentLink_81c3b4"
                  href="http://localhost:5000/api/v1/services/bezwaren/d0fe0ace-6f53-4342-b978-1cf12f8675be/attachments"
                  rel="external noopener noreferrer"
                >
                  connector.docx
                </a>
              </span>
              <time
                class="_DocumentListItem_Date_7ed0ad"
              >
                30 augustus 2023
              </time>
            </li>
            <li
              class="_DocumentListItem_7ed0ad"
            >
              <span
                class="_DocumentLinkWrap_81c3b4"
              >
                <span
                  class="_DownloadIcon_81c3b4"
                >
                  <svg
                    aria-hidden="true"
                    focusable="false"
                    height="14"
                    viewBox="0 0 32 32"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlns:xlink="http://www.w3.org/1999/xlink"
                  >
                    <title>
                      download-icoon
                    </title>
                    <path
                      d="M0,27.9962465 L32,27.9962465 L32,32 L0,32 L0,27.9962465 Z M22.36,14.0131373 L25.19,16.8357835 L16,26.0444166 L6.81,16.8357835 L9.64,14.0131373 L14,18.3772287 L14,-3.55271368e-15 L18,-3.55271368e-15 L18,18.3772287 L22.36,14.0131373 Z"
                    />
                  </svg>
                </span>
                <a
                  class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45 _DocumentLink_81c3b4"
                  href="http://localhost:5000/api/v1/services/bezwaren/736ae47e-e703-4238-a664-100cde4c90a1/attachments"
                  rel="external noopener noreferrer"
                >
                  Bezwaar_JB20230049.pdf
                </a>
              </span>
              <time
                class="_DocumentListItem_Date_7ed0ad"
              >
                30 augustus 2023
              </time>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="_InfoDetailGroup_6f1df2"
      >
        <div
          class="_DocumentListHeader_839df0"
        >
          <h3
            class="ams-heading ams-heading--4 _Label_6f1df2"
          >
            Documenten online besluitvorming
          </h3>
          <span
            class="_DocumentListHeader_Date_839df0"
          >
            Datum
          </span>
        </div>
        <div
          class="_InfoDetailGroupContent_6f1df2"
        >
          <ul
            class="_DocumentList_7ed0ad"
          >
            <li
              class="_DocumentListItem_7ed0ad"
            >
              <span
                class="_DocumentLinkWrap_81c3b4"
              >
                <span
                  class="_DownloadIcon_81c3b4"
                >
                  <svg
                    aria-hidden="true"
                    focusable="false"
                    height="14"
                    viewBox="0 0 32 32"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlns:xlink="http://www.w3.org/1999/xlink"
                  >
                    <title>
                      download-icoon
                    </title>
                    <path
                      d="M0,27.9962465 L32,27.9962465 L32,32 L0,32 L0,27.9962465 Z M22.36,14.0131373 L25.19,16.8357835 L16,26.0444166 L6.81,16.8357835 L9.64,14.0131373 L14,18.3772287 L14,-3.55271368e-15 L18,-3.55271368e-15 L18,18.3772287 L22.36,14.0131373 Z"
                    />
                  </svg>
                </span>
                <a
                  class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45 _DocumentLink_81c3b4"
                  href="http://localhost:5000/api/v1/services/bezwaren/d0fe0ace-6f53-4342-b978-1cf12f8675be/attachments"
                  rel="external noopener noreferrer"
                >
                  connector.docx
                </a>
              </span>
              <time
                class="_DocumentListItem_Date_7ed0ad"
              >
                30 augustus 2023
              </time>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="_InfoDetailGroup_6f1df2"
      >
        <div
          class="_DocumentListHeader_839df0"
        >
          <h3
            class="ams-heading ams-heading--4 _Label_6f1df2"
          >
            Documenten online procesdossier
          </h3>
          <span
            class="_DocumentListHeader_Date_839df0"
          >
            Datum
          </span>
        </div>
        <div
          class="_InfoDetailGroupContent_6f1df2"
        >
          <ul
            class="_DocumentList_7ed0ad"
          >
            <li
              class="_DocumentListItem_7ed0ad"
            >
              <span
                class="_DocumentLinkWrap_81c3b4"
              >
                <span
                  class="_DownloadIcon_81c3b4"
                >
                  <svg
                    aria-hidden="true"
                    focusable="false"
                    height="14"
                    viewBox="0 0 32 32"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlns:xlink="http://www.w3.org/1999/xlink"
                  >
                    <title>
                      download-icoon
                    </title>
                    <path
                      d="M0,27.9962465 L32,27.9962465 L32,32 L0,32 L0,27.9962465 Z M22.36,14.0131373 L25.19,16.8357835 L16,26.0444166 L6.81,16.8357835 L9.64,14.0131373 L14,18.3772287 L14,-3.55271368e-15 L18,-3.55271368e-15 L18,18.3772287 L22.36,14.0131373 Z"
                    />
                  </svg>
                </span>
                <a
                  class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45 _DocumentLink_81c3b4"
                  href="http://localhost:5000/api/v1/services/bezwaren/736ae47e-e703-4238-a664-100cde4c90a1/attachments"
                  rel="external noopener noreferrer"
                >
                  Bezwaar_JB20230049.pdf
                </a>
              </span>
              <time
                class="_DocumentListItem_Date_7ed0ad"
              >
                30 augustus 2023
              </time>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="_StatusLine_a12ff2"
    >
      <h4
        class="ams-heading ams-heading--4 _ListHeading_a12ff2"
      >
        Status
      </h4>
      <ul
        class="_List_a12ff2"
      >
        <li
          class="_ListItem_a12ff2"
        >
          <div
            class="_ListItemInner_a12ff2"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="_StatusConnection_a12ff2"
            >
              <span
                class="_ConnectLine_a12ff2 _ConnectLine--start-checked_a12ff2"
              />
              <span
                class="_Checkmark_a12ff2 _Checkmark--checked_a12ff2"
              />
            </div>
            <div
              class="_Panel_a12ff2 _Panel--status_a12ff2"
            >
              <strong
                class="_StatusTitle_a12ff2"
              >
                Ontvangen
              </strong>
              <time
                class="_StatusDate_a12ff2"
              >
                29 maart 2023
              </time>
            </div>
            <div
              class="_Panel_a12ff2 _Panel--description_a12ff2"
            >
              <div
                class="_PanelContent_a12ff2"
              />
            </div>
            <div
              class="_Panel_a12ff2 _Panel--documents_a12ff2"
            />
          </div>
        </li>
        <li
          class="_ListItem_a12ff2 _ListItem--highlight_a12ff2"
        >
          <div
            class="_ListItemInner_a12ff2"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="_StatusConnection_a12ff2"
            >
              <span
                class="_ConnectLine_a12ff2 _ConnectLine--middle-checked-next_a12ff2"
              />
              <span
                class="_Checkmark_a12ff2 _Checkmark--active_a12ff2 _Checkmark--checked_a12ff2"
              />
            </div>
            <div
              class="_Panel_a12ff2 _Panel--status_a12ff2"
            >
              <strong
                class="_StatusTitle_a12ff2"
              >
                In behandeling
              </strong>
              <time
                class="_StatusDate_a12ff2"
              >
                30 maart 2023
              </time>
            </div>
            <div
              class="_Panel_a12ff2 _Panel--description_a12ff2"
            >
              <div
                class="_PanelContent_a12ff2"
              />
            </div>
            <div
              class="_Panel_a12ff2 _Panel--documents_a12ff2"
            />
          </div>
        </li>
        <li
          class="_ListItem_a12ff2"
        >
          <div
            class="_ListItemInner_a12ff2"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="_StatusConnection_a12ff2"
            >
              <span
                class="_ConnectLine_a12ff2 _ConnectLine--end_a12ff2"
              />
              <span
                class="_Checkmark_a12ff2"
              />
            </div>
            <div
              class="_Panel_a12ff2 _Panel--status_a12ff2"
            >
              <strong
                class="_StatusTitle_a12ff2"
              >
                Afgehandeld
              </strong>
            </div>
            <div
              class="_Panel_a12ff2 _Panel--description_a12ff2"
            >
              <div
                class="_PanelContent_a12ff2"
              />
            </div>
            <div
              class="_Panel_a12ff2 _Panel--documents_a12ff2"
            />
          </div>
        </li>
      </ul>
    </div>
  </main>
</DocumentFragment>
`;
